--- a/CoverSongIdentification.ipynb
+++ b/CoverSongIdentification.ipynb
@@ -461,7 +461,7 @@
    ],
    "source": [
     "# 3. convert 'Duration' and Year' to datetime and show a few rows\n",
-    "data['Duration'] = pd.to_datetime(data['Duration'], format='%H:%M:%S.%f', errors='coerce').dt.time # NaT for invalid Year values\n",
+    "data['Duration'] = pd.to_datetime(data['Duration'], format='%H:%M:%S.%f', errors='coerce').dt.time # NaT for invalid Duration values\n",
     "data['Year'] = pd.to_datetime(data['Year'], format='%y', errors='coerce') # NaT for invalid Year values\n",
     "\n",
     "data.sample(5)"
