--- a/CoverSongIdentification.ipynb
+++ b/CoverSongIdentification.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
     "import seaborn as sns # install the latest version !pip install -U seaborn\n",
     "sns.set_style('darkgrid')\n",
     "\n",
-    "# ML libraries\n",
+    "# ML-related libraries\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.compose import ColumnTransformer\n",
@@ -54,7 +54,9 @@
     "from sklearn.metrics import mean_squared_error\n",
     "import prince # pip install prince\n",
     "from xgboost import XGBRegressor #pip3 install xgboost\n",
-    "import deepdish as dd"
+    "import deepdish as dd\n",
+    "import librosa\n",
+    "import librosa.display"
    ]
   },
   {
@@ -2151,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -2169,11 +2171,6 @@
     "#!pip install librosa\n",
     "#!pip install numba==0.48\n",
     "#!pip install libfmp\n",
-    "\n",
-    "import librosa\n",
-    "import librosa.display\n",
-    "import libfmp.b\n",
-    "import libfmp.c3\n",
     "\n",
     "# track example 1: plot chroma_cens\n",
     "rcParams['figure.figsize'] = 5, 5\n",
