up: final version notebook

--- a/CoverSongIdentification.ipynb
+++ b/CoverSongIdentification.ipynb
@@ -4,14 +4,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Projeto em construção..."
+    "# Introdução"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./singer.jpg\" width=\"600\"/>"
+    "# I. Sobre o Negócio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Identificação de Covers de Músicas (do inglês Cover Song Identification - CSI)\n",
+    "\n",
+    "## *Contexto*\n",
+    "\n",
+    "A música faz parte do dia a dia do ser humano. Não só se apresentando como manifestação artística, a música nos entretém, conforta e nos desperta uma variedade de sentimentos. Temos cantores e produtores musicais em todo o planeta. Desde pessoas desconhecidas que produzem música por uma questão de *hobby* até grandes *pop stars* que enchem estádios de futebol para fazer uma apresentação única.\n",
+    "\n",
+    "<img src=\"./singer.jpg\" width=\"600\"/>\n",
+    "\n",
+    "Músicas populares são muito apreciadas, tocadas em rádios, na internet e podem até mesmo fazer parte de trilhas sonoras de grandes produções do cinema. A paixão despertada pela música faz com que diversas pessoas, famosas ou não, realizem uma performance de uma produção já existente. Essa \"homenagem\" é comumente chamada de *cover*.\n",
+    "\n",
+    "Por exemplo, o famoso cantor Adam Lambert performa o cover do inesquecível vocalista Freddie Mercury, da banda Queen, há 10 anos. Como a música é uma capacidade humana, podemos perceber, mesmo por meio de um cover, diferenças (às vezes nem tão sutis) entre a voz do cantor original e o cover, e até mesmo distinções na forma de se apresentar. O intuito não é simplesmente copiar o artista, mas homenageá-lo, relembrá-lo, de certa forma eternizá-lo.\n",
+    "\n",
+    "<img src=\"./Freddie.jpg\" width=\"600\"/>\n",
+    "\n",
+    "Com o advento da internet, diversos covers foram distribuídos na rede. Por meio de uma mentalidade *data driven*, podemos utilizar esses dados para classificar, catalogar e extrair padrões diversos das músicas de cover."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# II. Questão de Negócio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nosso objetivo é realizar a identificação automatizada de covers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# III. Coleta e Natureza dos Dados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Produções musicais originais são protegidas por direitos autorais. Neste sentido, existe uma limitação sobre os dados existentes que podem ser utlizados abertamente. Ainda assim, utilizaremos uma base de dados disponibilizada publicamente, vide **referência 1**. Temos duas modalidades neste caso:\n",
+    "\n",
+    "1. **Um arquivo** no formato **CSV** contendo informações de mais de 100 mil covers, nacionais e internacionais, contendo informações como nome do artista e da música originais, tempo, frequência, dentre outros.\n",
+    "\n",
+    "2. Mais de **10 mil arquivos** no formato **H5 (tipo de documento HDF)** contendo informações acerca das características sonoras, físicas, das músicas de cover. Como há limitações legais quanto ao uso das músicas, pode-se apenas disponibilizar esse tipo de informação (e não a música integral, como no formato MP3, por exemplo)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Predição de Covers de Músicas"
    ]
   },
   {
@@ -20,11 +80,14 @@
    "source": [
     "## Sumário\n",
     "\n",
-    "- [1.Importação das Bibliotecas](#1.-Importação-das-Bibliotecas)\n",
+    "- [1. Importação das Bibliotecas](#1.-Importação-das-Bibliotecas)\n",
     "- [2. Preparação dos Dados](#2.-Preparação-dos-Dados)\n",
     "- [3. Análise Exploratória de Dados (AED)](#3.-Análise-Exploratória-de-Dados-(AED))\n",
-    "- [4. Modelagem - Deep Learning](#4.-Modelagem---Deep-Learning)\n",
-    "- [999. Referências](#999.-Referências)"
+    "- [4. Abordagem 1 - Ensemble: Floresta Aleatória (FA)](#4.-Abordagem-1---Ensemble:-Floresta-Aleatória-(FA))\n",
+    "- [5. Abordagem 2 - Ensemble: Extreme Gradient Boosting](#5.-Abordagem-2---Ensemble:-Extreme-Gradient-Boosting)\n",
+    "- [6. Abordagem 3 - Deep Learning (DL)](#6.-Abordagem-3---Deep-Learning-(DL))\n",
+    "- [7. Funções Utilizadas](#7.-Funções-Utilizadas)\n",
+    "- [8. Referências](#8.-Referências)"
    ]
   },
   {
@@ -2267,9 +2330,7 @@
     "print('Madmom Features (onsets) - exemplo 1: %s ||| exemplo 2: %s' % (len(e1_f6), len(e2_f6)))\n",
     "print('Madmom Features (snovfn) - exemplo 1: %s ||| exemplo 2: %s' % (len(e1_f7), len(e2_f7)))\n",
     "print('Madmom Features (tempos) - exemplo 1: %s ||| exemplo 2: %s' % (len(e1_f8), len(e2_f8)))\n",
-    "print('MFCC HTK - exemplo 1: %s ||| exemplo 2: %s' % (len(e1_f9), len(e2_f9)))\n",
-    "\n",
-    "#TODO: verificar se a classe de saída está balanceada"
+    "print('MFCC HTK - exemplo 1: %s ||| exemplo 2: %s' % (len(e1_f9), len(e2_f9)))"
    ]
   },
   {
@@ -2637,13 +2698,7 @@
       "114/114 [==============================] - 4s 32ms/step - loss: 1.4094 - accuracy: 0.5267\n",
       "Epoch 70/200\n",
       "114/114 [==============================] - 4s 35ms/step - loss: 1.3422 - accuracy: 0.5417\n",
-      "Epoch 71/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 71/200\n",
       "114/114 [==============================] - 4s 32ms/step - loss: 1.3294 - accuracy: 0.5453\n",
       "Epoch 72/200\n",
       "114/114 [==============================] - 3s 28ms/step - loss: 1.3165 - accuracy: 0.5469\n",
